@@ -4,4 +4,4 @@ develop = .
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = collective.recipe.template [test]
+eggs = collective.recipe.template [test,genshi]
